# users-mysql-haskell

./: .gitignore  ChangeLog.md  README.md  tests.sh  users-mysql-haskell.cabal
src/Web/Users/: MySQL.hs
tests/: env.sh  env.sh.template  tests.hs
