name:                users-mysql-haskell
version:             0.5.0.0
synopsis:            A MySQL backend for the users package
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz.carrete@facebook.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/danidiaz/users-mysql-haskell.git

library
  exposed-modules:     Web.Users.MySQL
  build-depends:
                       base 		 >=4.6 && <5,
                       users 		 >=0.5.0.0,
                       mysql-haskell >=0.5,
                       text 		 >=1.2,
                       mtl 			 >=2.1,
                       uuid 		 >=1.3,
                       bytestring 	 >=0.10,
                       time 		 >=1.4,
                       io-streams    >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  -- ghc-options:         -auto-all -Wall -fno-warn-orphans
  ghc-options:         -auto-all -Wall 

test-suite tests
  type:           	   exitcode-stdio-1.0
  ghc-options:    	   -Wall -threaded
  hs-source-dirs: 	   tests, src
  main-is:        	   tests.hs
  other-modules:  	   Web.Users.MySQL
  build-depends:
                       base 		 >=4.6 && <5,
                       users 		 >=0.5.0.0,
                       mysql-haskell >=0.5,
                       text 		 >=1.2,
                       mtl 			 >=2.1,
                       uuid 		 >=1.3,
                       bytestring 	 >=0.10,
                       time 		 >=1.4,
                       io-streams    >=1.2,
                       tasty         >=0.10.1.1,
                       tasty-hunit   >=0.9.2,
                       bytestring
  ghc-options:         -auto-all -Wall 
